--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "prebuild": "expo prebuild",
     "lint": "eslint \"**/*.{js,jsx,ts,tsx}\" && prettier -c \"**/*.{js,jsx,ts,tsx,json}\"",
     "format": "eslint \"**/*.{js,jsx,ts,tsx}\" --fix && prettier \"**/*.{js,jsx,ts,tsx,json}\" --write",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "deploy": "expo export -p web && cd ./infra && terraform init && terraform validate && terraform apply -auto-approve"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
