--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-status-bar": "~3.0.8",
     "expo-system-ui": "~6.0.7",
     "expo-web-browser": "~15.0.7",
+    "lucide-react-native": "^0.544.0",
     "nativewind": "latest",
     "react": "19.1.0",
     "react-dom": "19.1.0",
