--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "start": "expo start",
     "prebuild": "expo prebuild",
     "lint": "eslint \"**/*.{js,jsx,ts,tsx}\" && prettier -c \"**/*.{js,jsx,ts,tsx,json}\"",
     "format": "eslint \"**/*.{js,jsx,ts,tsx}\" --fix && prettier \"**/*.{js,jsx,ts,tsx,json}\" --write",
     "web": "expo start --web",
-    "deploy": "expo export -p web && cd ./infra && terraform init && terraform validate && terraform apply -auto-approve"
+    "deploy": "expo export -p web && cd ./infra && terraform init && terraform validate && terraform apply -auto-approve",
+    "build:web": "expo export -p web"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
