--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
     "lint": "eslint \"**/*.{js,jsx,ts,tsx}\" && prettier -c \"**/*.{js,jsx,ts,tsx,json}\"",
     "format": "eslint \"**/*.{js,jsx,ts,tsx}\" --fix && prettier \"**/*.{js,jsx,ts,tsx,json}\" --write",
     "web": "expo start --web",
-    "deploy": "expo export -p web && cd ./infra && terraform init && terraform validate && terraform apply -auto-approve",
+    "deploy": "cd ./infra && terraform init && terraform validate && terraform apply -auto-approve",
     "build:web": "expo export -p web"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
     "@react-navigation/native": "^7.0.3",
     "expo": "^54.0.4",
-    "expo-constants": "~18.0.8",
+    "expo-constants": "~18.0.9",
     "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.2",
+    "expo-router": "~6.0.7",
     "expo-status-bar": "~3.0.8",
     "expo-system-ui": "~6.0.7",
     "expo-web-browser": "~15.0.7",
