--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^7.0.3",
+    "@types/three": "^0.181.0",
     "expo": "^54.0.4",
     "expo-constants": "~18.0.9",
     "expo-linking": "~8.0.8",
@@ -34,6 +35,7 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "^0.21.0",
+    "three": "^0.181.2",
     "zustand": "^4.5.1"
   },
   "devDependencies": {
